# beanie4validation

./: .env.sample  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
app/: main.py
app/config/: factory.py  manager.py
app/database/: dwellings.py  owners.py  transactions.py
app/models/: base.py  dwellings.py  owners.py  transactions.py
app/resources/: dwellings-data.json  persons-data.json  property-ownership-data.json  property-transaction-data.json  unit-ownership-data.json  unit-transaction-data.json
